# Demand_forecasting_and_Inventory_Optimization_System

./: docker-compose.yml  pyproject.toml
src/demand_ops/: __init__.py
src/demand_ops/config/: settings.py
src/demand_ops/db/: __init__.py  forecast_models.py  inventory_models.py  metrics_models.py  models.py  repositories.py  session.py  simulation_models.py
src/demand_ops/features/: queries.py
src/demand_ops/forecasting/: baselines.py  metrics.py  write_forecasts.py
src/demand_ops/optimization/: model.py  params.py
src/demand_ops/services/: db_init.py  preview_features.py  run_backtest_baselines.py  run_forecast_baseline.py  run_inventory_optimization.py  run_inventory_simulation.py  seed_demo.py
src/demand_ops/simulation/: simulator.py
tests/: test_settings.py
